fix: z-index 오류 수정

--- a/src/main/resources/static/css/layout1.css
+++ b/src/main/resources/static/css/layout1.css
@@ -30,8 +30,8 @@ body {
     width: 1000px;
 }
 
-.table {
-    z-index: -10;
+.dropdown .dropdown-content {
+    z-index: 10;
 }
 
 /* 폰트 선언 구역 */
